--- a/src/components/timer/timer.module.scss
+++ b/src/components/timer/timer.module.scss
@@ -19,17 +19,18 @@
 .timer {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   
+  h2 {
+    color: #071435;
+    font-size: 1.4em;
+  }
+  
   div:first-child {
     text-align: center;
-    
-    p {
-      // color: #f8f8f8
-    }
+
   }
   
   div:last-child {
